--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,117 @@
-.App {
-  text-align: center;
+*{
+     margin: 0;
+     padding: 0;
+     box-sizing: border-box;
+}
+:root{
+       --main-color: #ff5e14;
+}
+body{
+     background: rgb(252, 252, 252);
+     font-family: "Gordita Regular";
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul{
+   list-style: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+a{
+      text-decoration: none;
+}
+img{
+    width: 100%;
+    height: 100%;
+}
+
+.inner-row{
+     width: 1200px;
+     margin:auto;
+}
+
+.intro-text{
+      text-align: center;
+      color: white;
+}
+.intro-text.special{
+      color: black;
+}
+.intro-text h1{
+     font-size: 45px;
+     font-family: "Gordita Bold";
+     text-transform: capitalize;
+}
+.intro-text p{
+     width: 600px;
+     margin: 20px auto;
+     line-height: 30px;
+     font-size: 18px;
+}
+
+/* Page Intro Styles */
+.page-wrapper,
+.service-page-wrapper{
+     width: 100%;
+     position: relative;
+     height: 85vh;
+}
+.page-wrapper .page-image-background,
+.service-page-wrapper .page-image-background{
+    height: inherit;
+    position: absolute;
+    bottom: 0;
+    z-index: 3;
+    width: 100%;
+}
+.page-image-background img{
+     object-fit: cover;
+}
+.bg-overlay{
+     position: absolute;
+     top: 0;
+     left: 0;
+     right: 0;
+     bottom: 0;
+     background: linear-gradient(rgba(27, 26, 26, 0.5) 0%, rgba(27, 26, 26, 0.25) 33%, rgba(27, 26, 26, 0.15) 72%);
+     z-index: inherit;
+}
+.page-texts{
+    position: absolute;
+    bottom: 20%;
+    width: 100%;
+    color: white;
+    z-index: 9 !important;
+}
+.page-texts h3{
+     font-weight: 500;
+     font-size: 16px;
+     display: flex;
+     gap: 5px;
+     align-items: center;
+     margin-bottom: 10px;
+     z-index: inherit;
+}
+.page-texts h3 span{
+    display: inline-flex;
+}
+.page-texts h1{
+    font-size: 70px;
+    font-family: "Gordita Bold";
+    z-index: inherit;
+}
+
+
+
+@media(max-width: 1220px){
+  .inner-row{
+      width: 95%;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media(max-width: 768px){
+     .intro-text p{
+            width: 100%;
+     }
+     .page-texts h1{
+          font-size: 50px;;
+       }
 }
